--- a/View/src/main/resources/mainView.fxml
+++ b/View/src/main/resources/mainView.fxml
@@ -26,12 +26,12 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label alignment="CENTER" prefHeight="17.0" prefWidth="456.0" text="BOB" textAlignment="CENTER" GridPane.columnSpan="2">
+      <Label alignment="CENTER" prefHeight="17.0" prefWidth="456.0" text="ALICE" textAlignment="CENTER" GridPane.columnSpan="2">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" prefHeight="17.0" prefWidth="394.0" text="ALICE" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="2">
+      <Label alignment="CENTER" prefHeight="17.0" prefWidth="394.0" text="BOB" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="2">
          <font>
             <Font size="24.0" />
          </font>
@@ -40,7 +40,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="37.0" prefWidth="300.0" spacing="10.0">
                <children>
-                  <Label prefHeight="17.0" prefWidth="211.0" text="Bob's Public Key:" />
+                  <Label prefHeight="17.0" prefWidth="211.0" text="P:" />
                   <Button fx:id="generateParamsBtn" mnemonicParsing="false" onAction="#generateParams" prefHeight="25.0" prefWidth="205.0" text="Generate Params" textAlignment="CENTER" />
                </children>
                <VBox.margin>
@@ -50,29 +50,35 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </HBox>
-            <TextArea fx:id="bobsPublicKeyText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
+            <TextArea fx:id="PText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
             <HBox alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="300.0">
                <children>
-                  <Label text="Alfa:" />
+                  <Label text="Q:" />
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </HBox>
-            <TextArea fx:id="alfaText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
+            <TextArea fx:id="QText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
             <HBox alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
                <children>
-                  <Label text="Prime:" />
+                  <Label text="G:" />
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </HBox>
-            <TextArea fx:id="primeText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
+            <TextArea fx:id="GText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
+            <HBox alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
                <children>
-                  <Button fx:id="publishParamsBtn" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#publishParams" text="Publish Params" textAlignment="RIGHT" />
+                  <Label text="Y:" />
                </children>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+            </HBox>
+            <TextArea fx:id="YText" editable="false" prefHeight="80.0" prefWidth="300.0" wrapText="true" />
+            <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
@@ -85,15 +91,28 @@
       <VBox prefHeight="200.0" prefWidth="118.0" spacing="10.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
          <children>
             <HBox alignment="CENTER" prefHeight="37.0" prefWidth="300.0" spacing="130.0">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
                <children>
-                  <Label text="Alice's Public Key:" />
-                  <Button fx:id="computeKeysBtn" disable="true" mnemonicParsing="false" onAction="#computeAlicesKeys" text="compute keys" textAlignment="CENTER" />
+                  <Label text="Message To Verify" />
+               </children>
+            </HBox>
+            <TextArea fx:id="messageCopiedText" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
+            <HBox alignment="CENTER" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
+               <children>
+                  <Button fx:id="verifyFileBtn" mnemonicParsing="false" onAction="#verifyFile" text="Verify File" textAlignment="CENTER" />
+                  <Button fx:id="verifyBtn" mnemonicParsing="false" onAction="#verifyMessage" text="Verify" textAlignment="CENTER" />
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </HBox>
-            <TextArea fx:id="alicesPublicKeyText" editable="false" prefHeight="79.0" prefWidth="280.0" wrapText="true" />
+            <Label text="Signature used to verify:" />
+            <Label text="r:" />
+            <TextArea fx:id="rCopiedText" minHeight="39.0" prefHeight="39.0" prefWidth="399.0" wrapText="true" />
+            <Label text="s:" />
+            <TextArea fx:id="sCopiedText" minHeight="39.0" prefHeight="39.0" prefWidth="399.0" wrapText="true" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -101,19 +120,22 @@
       </VBox>
       <VBox prefHeight="237.0" prefWidth="302.0" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2">
          <children>
-            <Label text="Received Message" />
-            <TextArea fx:id="receivedMessageText" editable="false" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
+            <Label text="Message To Sign" />
+            <TextArea fx:id="MessageText" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
             <HBox alignment="CENTER" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
                <children>
-                  <Button fx:id="decryptBtn" disable="true" mnemonicParsing="false" onAction="#decrypt" text="decrypt" textAlignment="CENTER" />
-                  <Button fx:id="decryptFileBtn" disable="true" mnemonicParsing="false" onAction="#decryptFile" text="decrypt file" textAlignment="CENTER" />
+                  <Button fx:id="signBtn" disable="true" mnemonicParsing="false" onAction="#signMessage" text="Sign" textAlignment="CENTER" />
+                  <Button fx:id="signFileBtn" disable="true" mnemonicParsing="false" onAction="#signFile" text="Sign File" textAlignment="CENTER" />
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </HBox>
-            <Label text="Decrypted Message" />
-            <TextArea fx:id="decryptedMessageText" editable="false" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
+            <Label text="Signature:" />
+            <Label text="r:" />
+            <TextArea fx:id="rCreatedText" editable="false" minHeight="39.0" prefHeight="39.0" prefWidth="399.0" wrapText="true" />
+            <Label text="s:" />
+            <TextArea fx:id="sCreatedText" editable="false" minHeight="39.0" prefHeight="39.0" prefWidth="399.0" wrapText="true" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -121,23 +143,7 @@
       </VBox>
       <VBox prefHeight="274.0" prefWidth="234.0" spacing="10.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2">
          <children>
-            <Label text="Write Message:" />
-            <TextArea fx:id="rawMessageText" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
-            <HBox alignment="CENTER" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
-               <children>
-                  <Button fx:id="encryptBtn" disable="true" mnemonicParsing="false" onAction="#encrypt" text="encrypt" textAlignment="CENTER" />
-                  <Button fx:id="encryptFileBtn" disable="true" mnemonicParsing="false" onAction="#encryptFile" text="encrypt file" textAlignment="CENTER" />
-               </children>
-               <padding>
-                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-               </padding>
-            </HBox>
-            <Label text="Encrypted message:" />
-            <TextArea fx:id="encryptedMessageText" editable="false" minHeight="80.0" prefHeight="82.0" prefWidth="300.0" wrapText="true" />
             <HBox alignment="TOP_RIGHT" prefHeight="37.0" prefWidth="300.0" spacing="80.0">
-               <children>
-                  <Button fx:id="sendBtn" disable="true" mnemonicParsing="false" onAction="#sendToBob" text="send to Bob" textAlignment="CENTER" />
-               </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
